fix alignment of delete icons

--- a/hipsteroid/src/sass/hipsteroid.scss
+++ b/hipsteroid/src/sass/hipsteroid.scss
@@ -354,6 +354,11 @@ header {
       &:hover {
         background-color: $logo-color-1;
       }
+
+      [class^="icon-"],
+      [class*=" icon-"] {
+        visibility: text-top;
+      }
     }
   }
 
